--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -34,26 +34,29 @@
     </PropertyGroup>
 
     <!-- Windows 64 bit -->
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win64'">
-        <DefineConstants>$(DefineConstants);MESA;ANGLE;MORE_IMAGE_TYPES;CSHARP_SCRIPTING;WIN64</DefineConstants>
+     <PropertyGroup Condition="'$(Platform)'=='Win64'">
+        <DefineConstants>$(DefineConstants);WIN64</DefineConstants>
         <PlatformTarget>x64</PlatformTarget>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win64'">
+        <DefineConstants>$(DefineConstants);MESA;ANGLE;MORE_IMAGE_TYPES;CSHARP_SCRIPTING</DefineConstants>
         <IsTrimmable>False</IsTrimmable>
         <IsAotCompatible>False</IsAotCompatible>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win64NoDepend'">
-        <DefineConstants>$(DefineConstants);WIN64</DefineConstants>
+        <DefineConstants>$(DefineConstants)</DefineConstants>
         <PlatformTarget>x64</PlatformTarget>
         <IsTrimmable>True</IsTrimmable>
         <IsAotCompatible>True</IsAotCompatible>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win64'">
-        <DefineConstants>$(DefineConstants);ANGLE;MESA;WIN64</DefineConstants>
+        <DefineConstants>$(DefineConstants);ANGLE;MESA</DefineConstants>
         <PlatformTarget>x64</PlatformTarget>
         <IsTrimmable>True</IsTrimmable>
         <IsAotCompatible>True</IsAotCompatible>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win64NoDepend'">
-        <DefineConstants>$(DefineConstants);WIN64</DefineConstants>
+        <DefineConstants>$(DefineConstants)</DefineConstants>
         <PlatformTarget>x64</PlatformTarget>
         <IsTrimmable>True</IsTrimmable>
         <IsAotCompatible>True</IsAotCompatible>
@@ -119,7 +122,7 @@
 
     <!-- Github Autobuild -->
     <PropertyGroup Condition="'$(Configuration)'=='Autobuild'">
-        <DefineConstants>$(DefineConstants);AUTOBUILD;CSHARP_SCRIPTING</DefineConstants>
+        <DefineConstants>$(DefineConstants);AUTOBUILD;CSHARP_SCRIPTING;MESA</DefineConstants>
         <Optimize>True</Optimize>
     </PropertyGroup>
     
