--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
     <PropertyGroup>
         <OutputType>Library</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <ApplicationIcon />
         <StartupObject />
         <FileUpgradeFlags>
@@ -11,7 +11,6 @@
         <OldToolsVersion>2.0</OldToolsVersion>
         <NuspecFile>./Emotion.nuspec</NuspecFile>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <NoWarn>1701;1702;1591;1734;IDE0001;IDE0002;IDE0049</NoWarn>
         <Configurations>Debug;Release;Autobuild</Configurations>
@@ -37,6 +36,7 @@
      <PropertyGroup Condition="'$(Platform)'=='Win64'">
         <DefineConstants>$(DefineConstants);WIN64</DefineConstants>
         <PlatformTarget>x64</PlatformTarget>
+        <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win64'">
         <DefineConstants>$(DefineConstants);MESA;ANGLE;MORE_IMAGE_TYPES;CSHARP_SCRIPTING</DefineConstants>
@@ -106,10 +106,17 @@
 
     <!-- Android -->
     <PropertyGroup Condition="'$(Platform)'=='Android'">
+        <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
         <PlatformTarget>AnyCPU</PlatformTarget>
+        <TargetFramework>net9.0-android</TargetFramework>
+        <SupportedOSPlatformVersion>28.0</SupportedOSPlatformVersion>
+        <Debugger>Xamarin</Debugger>
+
+        <DebugType>embedded</DebugType>
+        <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
     </PropertyGroup>
-    
-    <!-- Generic AnyCPU, no native libraries -->
+            
+    <!-- Generic AnyCPU, no config -->
     <PropertyGroup Condition="'$(Platform)'=='Other'">
         <PlatformTarget>AnyCPU</PlatformTarget>
     </PropertyGroup>
@@ -128,16 +135,17 @@
     
     <!-- todo -->
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Android'">
-      <IsTrimmable>True</IsTrimmable>
-      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Web'">
       <IsTrimmable>True</IsTrimmable>
       <IsAotCompatible>True</IsAotCompatible>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Android'">
-      <IsTrimmable>True</IsTrimmable>
-      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
+      <DebugType>embedded</DebugType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Web'">
       <IsTrimmable>True</IsTrimmable>
@@ -164,14 +172,15 @@
       <IsAotCompatible>True</IsAotCompatible>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Autobuild|Android'">
-      <IsTrimmable>True</IsTrimmable>
-      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
+      <DebugType>embedded</DebugType>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Autobuild|Web'">
-      <IsTrimmable>True</IsTrimmable>
-      <IsAotCompatible>True</IsAotCompatible>
+      <IsTrimmable>False</IsTrimmable>
+      <IsAotCompatible>False</IsAotCompatible>
     </PropertyGroup>
-
+    
     <!-- Libraries Code Include -->
     <ItemGroup Condition="!$(DefineConstants.Contains('OpenAL'))">
         <Compile Remove="Platform\Implementation\OpenAL\**\*.cs" />
@@ -182,17 +191,32 @@
     <ItemGroup Condition="!$(DefineConstants.Contains('ANGLE'))">
         <Compile Remove="Platform\Implementation\EglAngle\**\*.cs" />
     </ItemGroup>
+    <ItemGroup Condition="!$(DefineConstants.Contains('ANDROID'))">
+        <Compile Remove="Platform\Implementation\Android\**\*.cs" />
+    </ItemGroup>
     <ItemGroup Condition="!$(DefineConstants.Contains('MORE_MESH_TYPES'))">
         <Compile Remove="IO\MeshAssetTypes\Assimp\**\*.cs" />
     </ItemGroup>
     <ItemGroup Condition="!$(DefineConstants.Contains('CSHARP_SCRIPTING'))">
         <Compile Remove="Game\Scripting\**\*.cs" />
     </ItemGroup>
+    
     <ItemGroup>
+        <!-- All engine assets are embedded -->
         <EmbeddedResource Include="Assets\**\*.*">
             <CopyToOutputDirectory>Never</CopyToOutputDirectory>
         </EmbeddedResource>
     </ItemGroup>
+    
+     <!-- Android -->
+    <ItemGroup Condition="'$(Platform)'=='Android'">
+         <!-- Workaround for a stupid bug -->
+        <AndroidNativeLibrary Remove="AssetsNativeLibs\GLFW\linux\glfw.so" />
+        <AndroidNativeLibrary Remove="AssetsNativeLibs\OpenAL\linux\openal32.so" />
+        <AndroidNativeLibrary Remove="AssetsNativeLibs\OpenAL\linux\libsndio.so.6.1" />
+    </ItemGroup>
+    
+    <!-- ONE Temp -->
     <ItemGroup>
       <Compile Remove="Game\World2D\SceneControl\World2DBaseScene.cs" />
       <Compile Remove="Game\World3D\SceneControl\World3DBaseScene.cs" />
