[ONE] ExecTest Android configration

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -2,10 +2,9 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net8.0</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <Platforms>x64</Platforms>
-        <StartupObject>Emotion.ExecTest.Program</StartupObject>
+        <Platforms>Android;x64</Platforms>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     </PropertyGroup>
     
@@ -25,8 +24,27 @@
 
     <PropertyGroup Condition="'$(Platform)'=='x64'">
         <PlatformTarget>x64</PlatformTarget>
+        <StartupObject>Emotion.ExecTest.Program</StartupObject>
     </PropertyGroup>
-
+    
+    <PropertyGroup Condition="'$(Platform)'=='Android'">
+        <DefineConstants>$(DefineConstants);ANDROID</DefineConstants>
+        <PlatformTarget>AnyCPU</PlatformTarget>
+        <TargetFramework>net9.0-android</TargetFramework>
+        <SupportedOSPlatformVersion>28.0</SupportedOSPlatformVersion>
+        <Debugger>Xamarin</Debugger>
+        <EmbedAssembliesIntoApk>True</EmbedAssembliesIntoApk>
+    </PropertyGroup>
+    
+    <ItemGroup Condition="'$(Platform)'=='Android'">
+      <AndroidResource Include="AndroidResources\layout\activity_main.xml" />
+      <AndroidResource Include="AndroidResources\mipmap-anydpi-v26\appicon.png" />
+      <AndroidResource Include="AndroidResources\values\strings.xml" />
+    </ItemGroup>
+    <ItemGroup Condition="!$(DefineConstants.Contains('ANDROID'))">
+        <Compile Remove="Android\**\*.cs" />
+    </ItemGroup>
+    
     <ItemGroup>
       <Compile Remove="Examples\ComplexPolygonContours.cs" />
       <Compile Remove="Examples\FrameBufferSampling.cs" />
@@ -37,6 +55,7 @@
       <Compile Remove="Examples\RopeSim.cs" />
       <Compile Remove="Examples\TextRenderers.cs" />
     </ItemGroup>
+
     <ItemGroup>
       <None Include="Examples\ComplexPolygonContours.cs" />
       <None Include="Examples\FrameBufferSampling.cs" />
