[Reflector] Source generation fixes

--- a/Emotion.SourceGeneration/Properties/launchSettings.json
+++ b/Emotion.SourceGeneration/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DebugSourceGen": {
       "commandName": "DebugRoslynComponent",
-      "targetProject": "..\\Emotion.ExecTest\\Emotion.ExecTest.csproj"
+      "targetProject": "..\\Emotion\\Emotion.csproj"
     }
   }
 }
