[Reflector] Fixed generating partial classes for referenced assemblies and emotion classes being generated twice

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -46,6 +46,7 @@
     </ItemGroup>
     
     <ItemGroup>
+      <Compile Remove="ExamplesOne\TimerDemoScene.cs" />
       <Compile Remove="Examples\ComplexPolygonContours.cs" />
       <Compile Remove="Examples\FrameBufferSampling.cs" />
       <Compile Remove="Examples\GeneratedCurveMeshExample.cs" />
