Compilation Fixes, EmotionMeshAsset disabled

--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -58,6 +58,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <None Include="ExamplesOne\TimerDemoScene.cs" />
       <None Include="Examples\ComplexPolygonContours.cs" />
       <None Include="Examples\FrameBufferSampling.cs" />
       <None Include="Examples\GeneratedCurveMeshExample.cs" />
