--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -16,6 +16,9 @@
         <Configurations>Debug;Release;Autobuild</Configurations>
         <Platforms>Win64;Win64NoDepend;Win32;Linux64;MacOS64;Android;Web;Other</Platforms>
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+        
+         <!--You should use Emotion's deserialization anyway, but just in case you use the built in one. -->
+        <JsonSerializerIsReflectionEnabledByDefault>false</JsonSerializerIsReflectionEnabledByDefault>
     </PropertyGroup>
     
     <ItemGroup>
