--- a/Emotion.ExecTest/Emotion.ExecTest.csproj
+++ b/Emotion.ExecTest/Emotion.ExecTest.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk" ToolsVersion="Current">
+﻿<Project ToolsVersion="Current">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
@@ -7,10 +7,6 @@
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
     </PropertyGroup>
     
-    <ItemGroup>
-        <ProjectReference Include="..\Emotion.SourceGeneration\Emotion.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
-    </ItemGroup>
-
     <PropertyGroup Condition="'$(Configuration)'=='Debug'">
         <DebugType>full</DebugType>
         <DebugSymbols>true</DebugSymbols>
@@ -20,8 +16,21 @@
     <PropertyGroup Condition="'$(Configuration)'=='Release'">
         <Optimize>True</Optimize>
     </PropertyGroup>
+    
+    <!-- Conditional SDK -->
+    <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" Condition="'$(Platform)'!='Web'" />
+    <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" Condition="'$(Platform)'!='Web'" />
+    
+    <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk.BlazorWebAssembly" Condition="'$(Platform)'=='Web'" />
+    <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk.BlazorWebAssembly" Condition="'$(Platform)'=='Web'" />
+    
+    <!-- Reflector Support -->
+    <ItemGroup>
+        <ProjectReference Include="..\Emotion.SourceGeneration\Emotion.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+        <ProjectReference Include="..\Emotion\Emotion.csproj" />
+    </ItemGroup>
 
-     <!-- x64 -->
+    <!-- x64 -->
     <PropertyGroup Condition="'$(Platform)'=='x64'">
         <PlatformTarget>x64</PlatformTarget>
         <StartupObject>Emotion.ExecTest.Program</StartupObject>
@@ -52,9 +61,6 @@
       <DefineConstants>$(DefineConstants);WEB</DefineConstants>
     </PropertyGroup>
     <ItemGroup Condition="'$(Platform)'=='Web'">
-        <Content Include="..\EmotionLogo.png" Link="wwwroot\EmotionLogo.png">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.3" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.3" PrivateAssets="all" />
     </ItemGroup>
@@ -85,10 +91,6 @@
       <None Include="Examples\PngSuiteExample.cs" />
       <None Include="Examples\RopeSim.cs" />
       <None Include="Examples\TextRenderers.cs" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\Emotion\Emotion.csproj" />
     </ItemGroup>
 
 </Project>
