--- a/Emotion/Emotion.csproj
+++ b/Emotion/Emotion.csproj
@@ -144,10 +144,8 @@
     </ItemGroup>
     <ItemGroup Condition="'$(Platform)'!='Web'">
         <Compile Remove="Platform\Implementation\Web\**\*.cs" />
+        <None Remove="Platform\Implementation\Web\**\*.razor" />
     </ItemGroup>
-    <PropertyGroup Condition="'$(Platform)'!='Web'">
-        <EnableDefaultRazorComponentItems>false</EnableDefaultRazorComponentItems>
-    </PropertyGroup>
 
     <!-- Github Autobuild -->
     <PropertyGroup Condition="'$(Configuration)'=='Autobuild'">
