--- a/Emotion.AutomationMechanism/Emotion.AutomationMechanism.csproj
+++ b/Emotion.AutomationMechanism/Emotion.AutomationMechanism.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>ema</AssemblyName>
@@ -20,6 +20,8 @@
   <ItemGroup>
     <Compile Remove="Scripts\BuildAssets.cs" />
     <Compile Remove="Scripts\CreateProject.cs" />
+    <Compile Remove="Scripts\CreateProjectAssets\Game\LevelScene.cs" />
+    <Compile Remove="Scripts\CreateProjectAssets\Game\Program.cs" />
     <Compile Remove="Scripts\CreateProjectAssets\GlobalImports.cs" />
     <Compile Remove="Scripts\TestRenderScript.cs" />
     <Compile Remove="Scripts\TestScript.cs" />
@@ -32,7 +34,15 @@
     <None Include="Scripts\CreateProject.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Scripts\CreateProjectAssets\GlobalImports.cs">
+    <None Include="Scripts\CreateProjectAssets\Game\Game.csproj" />
+    <None Include="Scripts\CreateProjectAssets\Game\Game.csproj.user" />
+    <None Include="Scripts\CreateProjectAssets\Game\Scenes\DefaultScene.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Scripts\CreateProjectAssets\Game\Program.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Scripts\CreateProjectAssets\Game\GlobalImports.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Scripts\TestRenderScript.cs">
@@ -45,7 +55,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Emotion\Emotion.csproj" />
-	<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.9.2" />
+	<PackageReference Include="Microsoft.CodeAnalysis.CSharp.Scripting" Version="4.12.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Scripts\NewProject.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
