--- a/.github/workflows/buildWindows.yml
+++ b/.github/workflows/buildWindows.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build-n-run-tests:
 
-    runs-on: windows-2019
+    runs-on: windows-latest
     
     steps:
     - uses: actions/checkout@master
